# simple_opengl_wrapper

./: CMakeLists.txt  glad.c  glad.h  main.cpp
lib/: Buffer.cpp  Buffer.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexAttribute.cpp  VertexAttribute.h  VertexLayout.cpp  VertexLayout.h
shaders_example/: fragment.glsl  vertex.glsl
